# YADRO-telecom-test-task

./: CMakeLists.txt  README.md  log_error.txt
Core/: FastQueue.cpp  FastQueue.hpp  GameTable.cpp  GameTable.hpp  LogHandler.cpp  LogHandler.hpp  LogParser.cpp  LogParser.hpp  Time.cpp  Time.hpp  main.cpp  utils.cpp  utils.hpp
Test/Unit/: LogHandlerTest.cpp  LogHandlerTest.hpp  LogParserTest.cpp  LogParserTest.hpp  NameParserTest.cpp  NameParserTest.hpp  StoiDecoratorTest.cpp  StoiDecoratorTest.hpp  TimeTest.cpp  TimeTest.hpp  main.cpp
